2004-09-24  James Henstridge  <james@jamesh.id.au>

	* gtk/gdk.override (_wrap_gdk_color_parse): initialise the
	GdkColor struct to zeroes, so we don't get a random value in the
	"pixel" field after parsing the colour string.

2004-09-22  John Ehresman <jpe@wingide.com>

	* gtk/gdk.override: (_wrap_gdk_color_new): pass int variables
	to ParseTupleAndKeywords and then assign to GdkColor fields

2004-09-17  Johan Dahlin  <johan@gnome.org>

	* gobject/pygflags.c: Filter out 0 values

	* Makefile.am: 
	* docs/Makefile.am: Revert documentation changes

2004-08-28  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_bin_tp_init): override, chain to parent type.
	(_wrap_gtk_item_tp_init): idem.
	(_wrap_gtk_box_tp_init): idem.
	(_wrap_gtk_button_box_tp_init): idem.
	(_wrap_gtk_separator_tp_init): idem.
	(_wrap_gtk_separator_tp_init): idem.
	Partially fixes #150698.

2004-08-27  Xavier Ordoquy  <xordoquy@linovia.com>

	* gtk/gtk.override: raise a TypeError if an action callback
	isn't callable.

2004-08-24  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.defs: Clarify the DeprecationWarning messages in
	gtk.Progress methods.

2004-08-22  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* examples/gtk/widget.py (PyGtkWidget.__init__): Call
	gtk.Widget.__init__ instead of __gobject_init__.

	* gtk/gtkwidget.override (_wrap_gtk_widget_new): Override, chain
	to parent type.  Fixes bug #150698.

Sun Aug 22 09:47:12 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktreeview.override (_wrap_gtk_list_store_reorder): Don't
	access private 'length' field of GtkTreeStore, rather use
	gtk_tree_model_iter_n_children().

2004-08-21  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.override (_wrap_gtk_font_button_new) Fix property name.

2004-08-19  John Finlay  <finlay@moeraki.com>

	* examples/simple/dnd.py
	* examples/simple.scribble.py Update.

	* examples/ide/pyide.py
	* examples/ide/browse.py